force-app/main/default/objects/BMCServiceDesk__Knowledge_CI_Link__c/BMCServiceDesk__Knowledge_CI_Link__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between Knowledge articles and configuration items.</description>
    <label>Knowledge CI Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>