force-app/main/default/objects/BMCServiceDesk__Knowledge_CI_Link__c/fields/BMCServiceDesk__Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Instance_ID__c</fullName>
    <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__InstanceID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instance ID</label>
    <type>Text</type>
</CustomField>